// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Custom rendering 1`] = `
<div
  className="sc-cJSrbW cBynbV"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hmzhuo fbmoed"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH fsbcIX"
        >
          <p
            className="sc-bxivhb jVDCXG"
          >
            Make a selection
          </p>
        </div>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-ksYbfQ pMeUU"
    >
      <div
        className="sc-brqgnP jwrNlU"
      >
        <div
          className="sc-cMljjf krgCXT"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=988"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Bar A
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=960"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Foo B
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=958"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Bar C
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=940"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Foo D
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=924"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Bar E
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <div
                  className="sc-bwzfXH cozIiN"
                >
                  <div
                    className="sc-bwzfXH kcWmUX"
                  >
                    <img
                      src="https://picsum.photos/100/100?image=915"
                    />
                  </div>
                  <div
                    className="sc-bwzfXH bQfpwP"
                  >
                    <p
                      className="sc-bxivhb jpexxn"
                    >
                      Bar F
                    </p>
                    <p
                      className="sc-bxivhb jVDCXG"
                    >
                      Lorem ipsum dolor sit amet.
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;

exports[`Storyshots Select Default 1`] = `
<div
  className="sc-cJSrbW cBynbV"
  onBlur={[Function]}
  onFocus={[Function]}
  onKeyDownCapture={[Function]}
  tabIndex={0}
>
  <div
    className="sc-hmzhuo fbmoed"
    disabled={false}
  >
    <div
      className="sc-bwzfXH hUwEHM"
    >
      <div
        className="sc-bwzfXH iSqVrt"
        onClick={[Function]}
      >
        <p
          className="sc-bxivhb jVDCXG"
        >
          <span
            className="sc-kgAjT WmYSY"
          >
            Search a value
          </span>
        </p>
      </div>
      <button
        className="sc-htoDjs TzVGU"
        color={undefined}
        disabled={false}
        icon={undefined}
        id={undefined}
        onClick={[Function]}
        title="open"
        type="button"
      >
        <span
          aria-hidden={true}
          className="sc-iwsKbI MOBcS"
          dangerouslySetInnerHTML={
            Object {
              "__html": "test-file-stub",
            }
          }
          role="img"
        />
      </button>
    </div>
  </div>
  <MockPortal>
    <div
      className="sc-ksYbfQ pMeUU"
    >
      <div
        className="sc-brqgnP jwrNlU"
      >
        <div
          className="sc-cMljjf krgCXT"
        >
          <div
            data-test="bricks-select-collapse"
            style={
              Object {
                "display": "none",
                "overflow": "hidden",
              }
            }
          >
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Bar A
                  </span>
                </span>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Foo B
                  </span>
                </span>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Bar C
                  </span>
                </span>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Foo D
                  </span>
                </span>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Bar E
                  </span>
                </span>
              </div>
            </div>
            <div
              className="sc-TOsTZ NJJmQ"
              onClick={[Function]}
              onMouseEnter={[Function]}
            >
              <div
                className="sc-bwzfXH calcHG"
              >
                <span
                  className="sc-htpNat kTMegb"
                >
                  <span
                    className="sc-ifAKCX kRfhnK"
                  >
                    Bar F
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </MockPortal>
</div>
`;
